fixed the alignment of the index from and its items

--- a/static/scss/main.scss
+++ b/static/scss/main.scss
@@ -1,4 +1,3 @@
-
 @import url('https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700|Zilla+Slab+Highlight:400,700');
 @import url('https://fonts.googleapis.com/css?family=Press+Start+2P');
 @import "colors";
@@ -22,23 +21,31 @@
 
 
 form {
-    text-align: center;
-    .rounds {
-        width: 50px;
-    }
+    text-align: center; // targeting the form within index.html
     &.index {
-        align-self: flex-end;
+        align-self: center;
         background-color: map-get($color, red2);
         padding: 10px;
         border-radius: 20px;
         color: map-get($color, mustard);
         font-weight: 500;
+        width: 420px;
+        
+        // reduce the size of select input
+        .select-input {
+            width: 50px;
+        } 
+        
+        // target all inputs with type text
+        input[type="text"] {
+            width: 90px;
+        }
     }
 }
 
-    
+
 .player_selections {
-        margin: 20px 0;
+    margin: 20px 0;
 }
 
 .jumbotron-fluid {
@@ -46,12 +53,12 @@ form {
     background-attachment: fixed;
     background-repeat: no-repeat;
     background-size: cover;
-    color: map-get($color, white);
-    // margin: 0;
+    color: map-get($color, white); // margin: 0;
     height: calc(100vh - 168px);
     display: flex;
     flex-flow: column;
     justify-content: space-between;
+    justify-content: center;
 }
 
 
@@ -68,20 +75,19 @@ form {
     text-align: left;
     white-space: nowrap;
     padding: 10px 20px 20px 20px;
-    
+
     h3 {
         text-decoration: underline;
         text-align: center;
     }
-    
+
     p {
-       text-align: center;
-       font-size: medium;
+        text-align: center;
+        font-size: medium;
     }
-    
+
     .score {
         padding-left: 70px;
     }
 
 }
-
